# patsher2d-x

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  SConstruct  binding.gyp  build.py  main.js  package-lock.json  package.json  verison.py
.github/: FUNDING.yml
core/: CMakeCache.txt  CMakeLists.txt  Makefile  SCsub  cmake_install.cmake  config.py  core_bind.h  register_core_types.cpp  register_core_types.h  typedefs.h  typedefs.js  version.gen.h
core/config/: CMakeLists.txt  SCsub  config.js  engine.cpp  engine.h  project_settings.cpp  project_settings.h
core/error/: error_list.cpp  error_list.h  error_macros.cpp  error_macros.h
core/event/: CMakeLists.txt
core/input/: default_controller_mappings.h  input.h  input_enums.h  input_event.cpp  input_event.h
core/io/: CMakeLists.txt  config_file.cpp  config_file.cpp.save  config_file.h  dir_access.cpp  dir_access.h  file_access.cpp  file_access.h
core/math/: CMakeLists.txt  SCsub  rect2i.h  size2i.cpp  size2i.h
core/object/: CMakeLists.txt  callback_func.cpp  callback_func.h  callback_signals.cpp  callback_signals.h  m_class.cpp  m_class.h  m_object.cpp  m_object.h  ref_counted.cpp  ref_counted.h  script.h  undo_redo.cpp  undo_redo.h
core/os/: CMakeLists.txt
core/string/: .ustring.cpp.swp  CMakeLists.txt  SCsub  cstring.cpp  cstring.h  string.h  string_utils.h  ustring.h
core/templates/: CMakeLists.txt  SCsub  hash_map.h  list.h  list.ts  search_array.h  vector.h
core/variant/: .signals.h.swp  CMakeLists.txt  array.h  dictionary.cpp  dictionary.h  signals.h  variant.h
editor/: SCsub  editor_assert_manager.h  editor_node.cpp  editor_node.h  editor_scale.h
editor/exported/: SCsub
editor/gui/: editor_interface.cpp  editor_interface.h
main/: .SCsub.swp  CMakeLists.txt  main.cpp  main.h  main_toolbar.cpp  main_toolbar.h
module/mono/src/: map.cs
module/scss/: scss_format_loader.cpp  scss_format_loader.h
native/core/: core_bind.cpp  core_bind.h  core_builder.py  register_core_types.cpp  register_core_types.h
native/core/config/: engine.h  project_settings.cpp  project_settings.cpp.bak  project_settings.h  project_settings.h.bak
native/core/debug/: engine_debugger.h  engine_deubgger.cpp  local_debugger.cpp  local_debugger.h
native/core/error/: error_list.h
native/core/input/: input.cpp  input_event.cpp  input_event.h  input_map.cpp  input_map.h
native/core/io/: config_file.cpp  config_file.h  dir_access.cpp  dir_access.h  file_access.cpp  file_system.cpp  file_system.h  file_system_memory.cpp  file_system_memory.h  file_system_zip.h  resource.cpp  resource.h
native/core/math/: math_func.cpp  rect2i.cpp  rect2i.h
native/core/object/: callback_signals.h  m_class.cpp  m_class.h  m_object.cpp  m_object.h  script.cpp  script.h  undo_redo.cpp
native/core/string/: cstring.h  print_string.h  string_buffer.h  string_utils.cpp  ustring.cpp  ustring.h
native/core/templates/: hash_map.h  hash_set.h  list.h  map.h  object_data_ptr.h  pair.h  rid.h  search_array.h  vector.h
native/core/variant/: array.cpp  signals.cpp  signals.h  variant.cpp  variant.h
native/editor/: editor_builder.py  editor_scale.cpp
native/main/: main.cpp  main.h
native/module/node/core/object/: class.js
native/platform/android /app/: settings.gradle
native/platform/android /app/app/src/main/res/layout/: activity_main.xml
native/scene/gui/: container.h  control.h  menu_bar.h  panel.h
native/scene/main/: node.h  window.cpp  window.h
native/scene/resources/: texture.cpp
native/servers/renderer/: renderer_server.h  renderer_texture_id.cpp
platform/android /app/.androidide/editor/: openedFiles.json
platform/android /app/app/: build.gradle
platform/android /app/app/src/main/res/values/: strings.xml
resources/: SCsub  texture.h
scene/: SCsub  register_scene_types.cpp  register_scene_types.h
scene/2d/: SCsub
scene/gui/: control.h  dialog.cpp  dialog.h  item_list.h
scene/main/: node.h  timer.h  viewport.cpp  viewport.cpp.bak  viewport.h  window.cpp  window.h
servers/renderer/: renderer.cpp  renderer.h  renderer_texture_id.cpp  renderer_texture_id.h
(+1 files in other folders)
